--- a/paper/related.tex
+++ b/paper/related.tex
@@ -20,21 +20,22 @@ census tract level data is readily available for the US since at least
 1910~\citep{nhgis}, most studies consider the period between 1970 and 2010,
 using pre-harmonised data from the Longitudinal Tract Data
 Base~\citep{Logan2014}. Despite its inherent
-errors~\citep{Logan2016,Hallisey2017}, this dataset has become the standard
-source for longitudinal demographic data at the neighbourhood scale, with
-similar efforts appearing in other countries~\citep{Liu2015,Lee2015,Allen2018}.
-These datasets have been highly significant for the field. Yet they also limit
-the universe of  data that can be used to study neighbourhood change, since any
-new datasets would need to be similarly processed in order to be rendered
-compatible with these sources. 
+errors~\citep{Logan2016,Hallisey2017}, this dataset has become \revision{widely
+adopted, along with the Neighborhood Change Database~\cite{ncdb},} as source for
+longitudinal demographic data at the neighbourhood scale, with similar efforts
+appearing in other countries~\citep{Liu2015,Lee2015,Allen2018}. These datasets
+have been highly significant for the field. Yet they also limit the universe of
+data that can be used to study neighbourhood change, since any new datasets
+would need to be similarly processed in order to be rendered compatible with
+these sources. 
 
 Another option considers the use of grid
 data~\citep{Dmowska2017,Dmowska2018,stepinski2019imperfect}. Beyond the
-increased spatial accuracy, this approach does not require complex harmonisation
-when new data is considered, if the grids are compatible. However, demographic
-data is usually not available in this format, especially from older sources.
-Additionally, the conversion from tabulation areas can introduce significant
-errors.
+potentially increased spatial precision, this approach does not require complex
+harmonisation when new data is considered, if the grids are compatible. However,
+demographic data is usually not available in this format, especially from older
+sources. Additionally, the conversion from tabulation areas can introduce
+significant errors.
 
 Given these challenges, it is worth considering new alternatives. In this work,
 we propose a novel methodology that entirely avoids the problems of geographical
