--- a/paper/rev.bib
+++ b/paper/rev.bib
@@ -27,7 +27,12 @@ issn="1573-7861",
 doi="10.1023/B:SOFO.0000003004.78713.2e"
 }
 
-
+@misc{ncdb,
+  title={Census neighborhood change database 1970—2010 census tract data},
+  author={GeoLytics, Inc. and others},
+  year={2010},
+  publisher={GeoLytics, Inc.}
+}
 
 @article{Fong2011,
 author = {Fong, Eric and Chan, Elic},
