--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -92,24 +92,29 @@ and documentation separately.}
 \section{Intuition}
 \label{sec:intuition}
 While utterly simple, the network model breaks from the deeply rooted
-traditional tabular paradigm in a significant way. The traditional method requires the data to be treated as a collection of fixed entities with properties that evolve over time -- rows in a table with temporal values as columns. By contrast, our method represents each measurement as a separate entity and encodes the evolution of these entities over time.
+traditional tabular paradigm in a significant way. The traditional method
+requires the data to be treated as a collection of fixed entities with
+properties that evolve over time -- rows in a table with temporal values as
+columns. By contrast, our method represents each measurement as a separate
+entity and encodes the evolution of these entities over time.
 
-To ease the cognitive transition to a new paradigm, we start with an intuitive example of how the method
-works, using a small portion of a fictitious urban region illustrated on the
-left part of Figure~\ref{fig:intuition}. This example includes three different
-times ($t_0,t_1,t_2$), with different aggregation areas identified as letters
-from A to H. For $t_0$, the initial time, we have areas A and B, with small
-houses and a park, respectively. The park remains stable (B, E, and H), but the
-houses are partially replaced by larger buildings (C and F). 
+To ease the cognitive transition to a new paradigm, we start with an intuitive
+example of how the method works, using a small portion of a fictitious urban
+region illustrated on the left part of Figure~\ref{fig:intuition}. This example
+includes three different times ($t_0,t_1,t_2$), with different aggregation areas
+identified as letters from A to H. For $t_0$, the initial time, we have areas A
+and B, with small houses and a park, respectively. The park remains stable (B,
+E, and H), but the houses are partially replaced by larger buildings (C and F). 
 
-This example illustrates some of the challenges of harmonisation. None of
-these aggregation areas is clearly suitable as an interpolation target. In fact,
+This example illustrates some of the challenges of harmonisation. None of these
+aggregation areas is clearly suitable as an interpolation target. In fact,
 adopting any of these areas as a target would require merging heterogeneous
 regions and/or dividing homogeneous regions. For instance, by choosing the
 regions of $t_1$, A would be split to match regions C and D, which appears to be
-a rather reasonable approximation in this homogeneous artificial example (even if it commits the fallacy of division). Region F would be similarly split to match C, but F
-would be split and merged with G to match D, potentially leading to statistical
-measurements that do not properly represent either region. 
+a rather reasonable approximation in this homogeneous artificial example (even
+if it commits the fallacy of division). Region F would be similarly split to
+match C, but F would be split and merged with G to match D, potentially leading
+to statistical measurements that do not properly represent either region. 
 
 Real world measurements are seldom as homogeneous and noise-free as this
 artificial example. By splitting and merging the data to fit arbitrary borders,
@@ -134,12 +139,17 @@ increases the distance between measurement and reality.
             \node [circle, draw=red, thick] (g) at (2,0) {G};
             \node [circle, draw=green, thick] (h) at (4,0) {H};
             \draw (a) -- (c);
+            \draw (a) -- (b);
             \draw (a) -- (d);
             \draw (b) -- (e);
             \draw (c) -- (f);
+            \draw (c) -- (d);
             \draw (d) -- (f);
+            \draw (d) -- (e);
             \draw (d) -- (g);
             \draw (e) -- (h);
+            \draw (f) -- (g);
+            \draw (g) -- (h);
         \end{tikzpicture}
     } \caption{Network based spatio-temporal data representation. \textbf{Left}:
     Three temporal stages of the evolution of a fictitious urban area, with
@@ -156,8 +166,8 @@ areas, leading to the network illustrated on the right of
 Figure~\ref{fig:intuition}. By partitioning the network into connected nodes
 that are similar, we are effectively identifying clusters in the spatio-temporal
 data, as illustrated by the colours of the nodes on the right side of
-Figure~\ref{fig:intuition}. Further, the possible evolution paths can also be
-obtained by computing temporal sequences of nodes, in this case: (A, C, F), (A,
+Figure~\ref{fig:intuition}. Further, all the possible paths of change can be
+obtained by computing sequences of nodes over time, in this case: (A, C, F), (A,
 D, F), (A, D, G), and (B, E, H). This representation is also suited for
 geographically consistent regions, as illustrated by the stable park in this
 example, and is therefore a generalisation of the traditional paradigm.
@@ -169,4 +179,5 @@ no population percentages associated with the edge. Indeed, our method also
 connects regions of the same time that share borders, representing exactly that
 they are neighbouring areas.
 
-In the following, we argue that this network representation allows us to study neighbourhood change in a way that does not require an prior interpolation. 
+In the following, we argue that this network representation allows us to study
+neighbourhood change in a way that does not require an prior interpolation. 
