--- a/paper/main.tex
+++ b/paper/main.tex
@@ -33,20 +33,21 @@
 
 
 %TODO macros
-%\usepackage{xargs}
-%\usepackage[pdftex,dvipsnames]{xcolor} 
-%\usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
-% \newcommandx{\unsure}[2][1=]{\todo[linecolor=red,backgroundcolor=red!25,bordercolor=red,#1]{#2}}
-% \newcommandx{\change}[2][1=]{\todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]{#2}}
-% \newcommandx{\info}[2][1=]{\todo[linecolor=OliveGreen,backgroundcolor=OliveGreen!25,bordercolor=OliveGreen,#1]{#2}}
-% \newcommandx{\improvement}[2][1=]{\todo[linecolor=Plum,backgroundcolor=Plum!25,bordercolor=Plum,#1]{#2}}
-% \newcommandx{\thiswillnotshow}[2][1=]{\todo[disable,#1]{#2}}
+\usepackage{xargs}
+\usepackage[pdftex,dvipsnames]{xcolor} 
+\newcommand{\revision}[1]{\protect{\color{blue}{#1}}}
+\usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
+\newcommandx{\unsure}[2][1=]{\todo[linecolor=red,backgroundcolor=red!25,bordercolor=red,#1]{#2}}
+\newcommandx{\change}[2][1=]{\todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]{#2}}
+\newcommandx{\info}[2][1=]{\todo[linecolor=OliveGreen,backgroundcolor=OliveGreen!25,bordercolor=OliveGreen,#1]{#2}}
+\newcommandx{\improvement}[2][1=]{\todo[linecolor=Plum,backgroundcolor=Plum!25,bordercolor=Plum,#1]{#2}}
+\newcommandx{\thiswillnotshow}[2][1=]{\todo[disable,#1]{#2}}
 
-%\newcommandx{\unsure}[2][1=]{}
-%\newcommandx{\change}[2][1=]{}
-%\newcommandx{\info}[2][1=]{}
-%\newcommandx{\improvement}[2][1=]{}
-%\newcommandx{\thiswillnotshow}[2][1=]{}
+% \newcommandx{\unsure}[2][1=]{}
+% \newcommandx{\change}[2][1=]{}
+% \newcommandx{\info}[2][1=]{}
+% \newcommandx{\improvement}[2][1=]{}
+% \newcommandx{\thiswillnotshow}[2][1=]{}
 
 
 
@@ -130,11 +131,19 @@
 
 
 \begin{abstract}
-	This paper proposes a novel method for processing spatio-temporal information for data-driven identification of neighbourhoods and their dynamics.  Using a simple network representation, the method enables longitudinal analysis of regions \emph{without the need for geographical harmonisation}. The proposed method therefore sidesteps a laborious and error-prone process that is nevertheless currently used in virtually all longitudinal analysis of region-based data.
+	This paper proposes a novel method for processing spatio-temporal information
+	for data-driven identification of neighbourhoods and their dynamics.  Using a
+	simple network representation, the method enables longitudinal analysis of
+	regions \emph{without the need for geographical harmonisation}. The proposed
+	method therefore sidesteps a laborious and error-prone process that is
+	nevertheless currently used in virtually all longitudinal analysis of
+	region-based data.
     
-  To allow for a transparent corroboration of our method, we use it as a
-  basis for an interactive and intuitive interface for the progressive
-  exploration of the results. The interface gives direct access to the original data to both experts and non-experts, allowing users to characterize broad patterns of stability and change and identify detailed local processes.
+  To allow for a transparent corroboration of our method, we use it as a basis
+  for an interactive and intuitive interface for the progressive exploration of
+  the results. The interface gives direct access to the original data to both
+  experts and non-experts, allowing users to characterize broad patterns of
+  stability and change and identify detailed local processes.
 
   
   We validate our method with illustrative scenarios from Chicago, Toronto, and
@@ -180,8 +189,10 @@ stakeholder transparency in urban sciences.
 
 More importantly, we introduced a new idea that, apparently, was never
 considered in the literature. While significant resources have been invested to
-improve geographical harmonisation, rarely if at all has anybody doubted that it was really necessary in the first place. We proved that it is not necessary, at least for the vast majority of demographic studies, especially for  neighbourhood effects and neighbourhood
-dynamics.
+improve geographical harmonisation, rarely if at all has anybody doubted that it
+was really necessary in the first place. We proved that it is not necessary, at
+least for the vast majority of demographic studies, especially for
+neighbourhood effects and neighbourhood dynamics.
 
 \censure{
 \section*{Acknowledgement}
