--- a/paper/method.tex
+++ b/paper/method.tex
@@ -263,10 +263,11 @@ time. Clicking on a region in these maps will bring up a new panel with the
 original census data of this specific region. The actual population numbers are
 below the maps.
 
+%TODO THIS IS WRONG!
 Each aspect is represented by a stacked bar plot, where the width of each
 rectangle corresponds to the average percentage of that variable over the
-considered period. In this case, about half of the people in Chicago in the
-considered period are married, and the percentage that are Widowers or Divorced
+considered period. In this case, about half of the people in this region, in the
+considered period, are married, and the percentage that are Widowers or Divorced
 is roughly similar. About half of the population work in Administrative jobs, a
 third never completed high-school, approximately half have gross family income
 below 50,000USD per year. The vast majority identify as white. Placing the mouse
